--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^5.5|^7.0",
         "guzzlehttp/guzzle": "^6.0",
-        "wyrihaximus/react-guzzle-http-client": "dev-improvement-use-clue-buzz-instead-of-react-http-client"
+        "hotrush/react-guzzle-http-client": "3.0.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
@@ -23,6 +23,12 @@
     "autoload": {
         "psr-4": {
             "WyriHaximus\\React\\GuzzlePsr7\\": "src/"
+        }
+    },
+    "repositories": {
+        "repo": {
+            "type": "git",
+            "url": "https://github.com/hotrush/react-guzzle-http-client.git"
         }
     },
     "autoload-dev": {
